--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </a>
                 
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto ">
+                <ul class="navbar-nav  ms-md-auto ">
                   <li class="nav-item ">
                     <a class="nav-link text-center text-md-left" aria-current="page" href="#">Home</a>
                   </li>
@@ -46,7 +46,7 @@
                     <a class="nav-link text-center text-md-left" href="#feedback">Feedback</a>
                   </li>
                   <li class="nav-item ">
-                    <a class="nav-link text-center text-md-left" href="#">Contact</a>
+                    <a class="nav-link text-center text-md-left" href="#contact">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -57,7 +57,7 @@
           <section id="banner">
             <div class="banner-container d-flex justify-content-center align-items-center">
                 <div class="banner-contents text-center">
-                    <h1 class="fw-bolder mb-5 text-white">Loearn Something New !!!</h1>
+                    <h1 class="fw-bolder mb-3 mb-lg-5 text-white">Loearn Something New !!!</h1>
                     <button class="btn btn-primary py-2 px-3 me-3 btn-lg" onclick="location.href='#tutorials'"><i class="fas fa-play me-2"></i>Tuitorials</button>
                     <button class="btn btn-primary py-2 px-3 me-3 btn-lg"><i class="fa-brands fa-youtube me-2"></i><a href="https://www.youtube.com" class="subcribe-a" target="_blank">Subscribe</a></button>
                 </div>
