--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="banner-container d-flex justify-content-center align-items-center">
                 <div class="banner-contents text-center">
                     <h1 class="fw-bolder mb-3 mb-lg-5 text-white">Loearn Something New !!!</h1>
-                    <button class="btn btn-primary py-2 px-3 me-3 btn-lg" onclick="location.href='#tutorials'"><i class="fas fa-play me-2"></i>Tuitorials</button>
-                    <button class="btn btn-primary py-2 px-3 me-3 btn-lg"><i class="fa-brands fa-youtube me-2"></i><a href="https://www.youtube.com" class="subcribe-a" target="_blank">Subscribe</a></button>
+                    <button class="btn btn-primary py-2 px-3 btn-lg me-2" onclick="location.href='#tutorials'"><i class="fas fa-play me-2"></i>Tuitorials</button>
+                    <button class="btn btn-primary py-2 px-3 ms-3 btn-lg"><i class="fa-brands fa-youtube me-2"></i><a href="https://www.youtube.com" class="subcribe-a" target="_blank">Subscribe</a></button>
                 </div>
             </div>
 
